SFDXProject/force-app/main/default/objects/Imoveis__c/fields/Copas__c.field-meta.xml
<CustomField>
    <fullName>Copas__c</fullName>
    <inlineHelpText>Insira quantidade de copas</inlineHelpText>
    <label>Copas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>