SFDXProject/force-app/main/default/objects/Imoveis__c/fields/Quartos__c.field-meta.xml
<CustomField>
    <fullName>Quartos__c</fullName>
    <inlineHelpText>Insira quantidade de quartos</inlineHelpText>
    <label>Quartos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>