SFDXProject/force-app/main/default/objects/Imoveis__c/fields/TipoImovel__c.field-meta.xml
<CustomField>
    <fullName>TipoImovel__c</fullName>
    <inlineHelpText>Escolha o tipo do imóvel</inlineHelpText>
    <label>Tipo do Imóvel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhum</fullName>
                <default>true</default>
                <label>Nenhum</label>
            </value>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Apartamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>