SFDXProject/force-app/main/default/objects/Imoveis__c/fields/VisitaAgendada__c.field-meta.xml
<CustomField>
    <fullName>VisitaAgendada__c</fullName>
    <inlineHelpText>Informa a data/hora da visita agendada</inlineHelpText>
    <label>Visita Agendada</label>
    <type>DateTime</type>
</CustomField>