SFDXProject/force-app/main/default/objects/Imoveis__c/listViews/Todos_Im_veis.listView-meta.xml
<ListView>
    <fullName>Todos_Im_veis</fullName>
    <columns>NAME</columns>
    <columns>TipoImovel__c</columns>
    <filterScope>Mine</filterScope>
    <label>Todos Imóveis</label>
</ListView>